--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 padevchooser (0.9.3-2) UNRELEASED; urgency=low
 
+  [ Loic Minier ]
   * Depend on gnome-icon-theme for the icons.
 
- -- Loic Minier <lool@dooz.org>  Tue, 24 Oct 2006 20:46:31 +0200
+  [ CJ van den Berg ]
+  * debian/rules: Port to CDBS and quilt.
+
+ -- CJ van den Berg <cj@vdbonline.com>  Sun, 27 May 2007 11:14:34 +0200
 
 padevchooser (0.9.3-1) unstable; urgency=low
 
