--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,9 @@ padevchooser (0.9.3-2) UNRELEASED; urgency=low
   [ CJ van den Berg ]
   * debian/rules: Port to CDBS and quilt.
   * debian/patches: Reformat patch series to work with quilt.
+  * debian/copyright: Update FSF postal address.
 
- -- CJ van den Berg <cj@vdbonline.com>  Sun, 27 May 2007 11:17:07 +0200
+ -- CJ van den Berg <cj@vdbonline.com>  Wed, 30 May 2007 16:39:09 +0200
 
 padevchooser (0.9.3-1) unstable; urgency=low
 
