--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,9 @@ padevchooser (0.9.3-2) UNRELEASED; urgency=low
   * debian/rules: Port to CDBS and quilt.
   * debian/patches: Reformat patch series to work with quilt.
   * debian/copyright: Update FSF postal address.
+  * debian/padevchooser.1.txt: Add a simple man page.
 
- -- CJ van den Berg <cj@vdbonline.com>  Wed, 30 May 2007 16:39:09 +0200
+ -- CJ van den Berg <cj@vdbonline.com>  Wed, 30 May 2007 16:50:36 +0200
 
 padevchooser (0.9.3-1) unstable; urgency=low
 
