--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+padevchooser (0.9.4-1.1) unstable; urgency=low
+
+  * Non-maintainer upload.
+  * debian/control: Add libatomic-ops-dev to Build-Depends. (Closes: #705684)
+
+ -- Sebastian Ramacher <sramacher@debian.org>  Sat, 18 May 2013 11:43:08 +0200
+
 padevchooser (0.9.4-1) unstable; urgency=low
 
   * New upstream version
